fixed plantDetails prev button callback variable and decreased z-index on details & overlay

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -147,7 +147,6 @@ h1#plant-name
   background: rgba(0, 0, 0, 0.4)
   width: 100%
   height: 100%
-  z-index: 1
 
 div#plant-details
   display: none
@@ -157,4 +156,4 @@ div#plant-details
   top: 0
   left: 0
   width: 80%
-  z-index: 2
+  z-index: 1
